@@ -1,8 +1,10 @@
 package com.jetbrains.snakecharm.inspections
 
+import com.intellij.psi.PsiElement
 import com.jetbrains.python.inspections.PyInspectionExtension
 import com.jetbrains.python.psi.types.PyType
 import com.jetbrains.python.psi.types.TypeEvalContext
+import com.jetbrains.snakecharm.lang.psi.SmkRuleOrCheckpointArgsSection
 import com.jetbrains.snakecharm.lang.psi.types.SmkAvailableForSubscriptionType
 
 class SmkIgnorePyInspectionExtension: PyInspectionExtension() {
@@ -13,7 +15,8 @@ class SmkIgnorePyInspectionExtension: PyInspectionExtension() {
         return  false
     }
 
-    // ignoreShadowed
+    override fun ignoreShadowed(element: PsiElement) = element is SmkRuleOrCheckpointArgsSection
+
     // ignoreMissingDocstring
     // ignoreMethodParameters
     // getFunctionParametersFromUsage
